--- a/src/App.css
+++ b/src/App.css
@@ -105,4 +105,48 @@ body{
   background : rgb(255, 69,79);
 }
 
+.about{
+  padding : 80px 0;
+}
+
+.row{
+  width:100%;
+  display: flex;
+}
+
+.col-6{
+  width: 50%
+}
+
+.about h3 {
+  color: rgba(37, 37, 37, 0.7);
+  font-size: 30px;
+  margin-bottom: 12px;
+  font-weight: 700;
+}
+
+.about h1 {
+  font-size: 40px;
+  color: #252525;
+  font-weight: 700;
+  line-height: 40px;
+  margin-bottom: 20px;
+}
+.about p {
+  font-size: 18px;
+  color: #8b8b8b;
+  font-weight: 500;
+}
+
+.about__btn {
+  margin-top: 35px;
+}
+.about__img {
+  width: 100%;
+  overflow: hidden;
+}
+
+.about__img img {
+  width: 100%;
+}
 
