--- a/src/App.css
+++ b/src/App.css
@@ -150,3 +150,9 @@ body{
   width: 100%;
 }
 
+.shop{
+  width : 100%;
+  background: url("/public/img/bg.jpg");
+  height : 450 px;
+  background-attachment: fixed;
+}
