--- a/src/App.css
+++ b/src/App.css
@@ -156,3 +156,26 @@ body{
   height : 450 px;
   background-attachment: fixed;
 }
+
+.shop__text {
+  height : 450px;
+  display : flex;
+  align-items : center;
+  width : 400px;
+  justify-content: center;
+  margin : 0 auto;
+  color : #fff;
+}
+
+.shop__text h1 {
+  font-size: 40px;
+  line-height : 60px;
+  font-weight : 600;
+  font-style : normal;
+  letter-spacing : 0.5 px;
+}
+
+.shop__btn {
+  margin-top : 35px;
+}
+
