--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,9 @@ body{
   width: 50%
 }
 
+.col-3 {
+  width : 25%;
+}
 .about h3 {
   color: rgba(37, 37, 37, 0.7);
   font-size: 30px;
@@ -178,4 +181,29 @@ body{
 .shop__btn {
   margin-top : 35px;
 }
+
+.clients{
+  width : 100%;
+  padding : 100px 0;
+  background: url("/public/img/bg.jpg");
+  background-repeat: no-repeat;
+  background-cover :cover;
+  color: #fff;
+  background-attachment : fixed;
+}
+
+.client{
+  text-align : center;
+}
+
+.client h1{
+  font-style: 45px;
+}
+
+.client p {
+  font-style : 18px;
+  font-weight : 400;
+  margin-top : 10px;
+}
+
 
