--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,7 @@ body{
 .row{
   width:100%;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .col-6{
@@ -121,6 +122,11 @@ body{
 .col-3 {
   width : 25%;
 }
+
+.col-4 {
+  width : 33.333333333%;
+}
+
 .about h3 {
   color: rgba(37, 37, 37, 0.7);
   font-size: 30px;
@@ -206,4 +212,106 @@ body{
   margin-top : 10px;
 }
 
+.prices{
+  width : 100%;
+  padding : 80px 0;
+}
 
+.price{
+  padding : 20px;
+  text-align : center;
+}
+
+.price__img {
+  width : 100%;
+}
+
+.price__img img{
+  width : 250px;
+}
+
+.price__heading {
+  margin-top : 20px;
+  font-style : 25px;
+}
+
+.price__text{
+  margin-top : 15px;
+  color : #888888;
+  font-size : 18px;
+  font-weight: 300;
+}
+
+.price_rs{
+  font-size: 25px;
+  margin-top : 15px;
+}
+
+.price_rs {
+  font-size: 30px;
+  margin-top: 15px;
+}
+
+@media (max-width: 700px) {
+  .navbar__text {
+    display: flex;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .logo {
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  .container {
+    width: 100%;
+    padding: 0 30px;
+  }
+  .banner__text {
+    width: auto;
+  }
+  .banner__text h3 {
+    font-size: 25px !important;
+  }
+  .banner__text h1 {
+    font-size: 40px;
+    line-height: 60px;
+    font-weight: 900;
+    margin-top: 20px;
+  }
+  .banner__text p {
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 20px;
+  }
+  .navbar__ul {
+    width: 100%;
+    justify-content: center;
+  }
+  .navbar__ul li a {
+    text-decoration: none;
+    color: #fff;
+    padding: 0 10px;
+    font-weight: 300;
+    text-transform: uppercase;
+  }
+  .col-3,
+  .col-4,
+  .col-6 {
+    width: 100%;
+  }
+  .client {
+    margin: 20px 0;
+  }
+  .about h1 {
+    font-size: 25px;
+  }
+  .shop h1 {
+    font-size: 25px;
+  }
+  .menu h1 {
+    font-size: 25px;
+  }
+}
